--- a/PokemonSearchApp/styles.css
+++ b/PokemonSearchApp/styles.css
@@ -36,6 +36,12 @@ body {
     margin: 0;
 }
 
+#search-input {
+    height: 30px;
+    border-radius: 20px;
+    text-align: center;
+}
+
 #search-button {
     display: inline-block;
     outline: 0;
@@ -70,14 +76,23 @@ body {
     display: flex;
 }
 
+.small {
+    font-family: sans-serif;
+    font-size: 0.7rem;
+    font-style: italic;
+}
+
 #image-container {
     width: 35%;
-    margin-left: 15%;
+    margin-left: 10%;
     border-radius: 20px;
     margin-right: 20px;
     background-position: center;
 }
 
+#sprite {
+    margin-top: 10px;
+}
 
 #pokemon {
     display: flex;
@@ -166,3 +181,5 @@ th {
     border: none;
     background-color: #30A7D7;
 }
+
+@media only screen and (max-width: 1300px) {}
