--- a/RomanNumeralConverter/styles.css
+++ b/RomanNumeralConverter/styles.css
@@ -1,60 +1,64 @@
 html {
     height: 100%;
-    background-color: #DFD4C9;
+    background-color: #34435E;
+    font-family: "Castoro Titling", system-ui;
 }
 
-.click {
-    padding: 10px;
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
+
+h1 {
+    text-align: center;
+    color: white;
+    margin-top: 10%;
+    margin-left: 35%;
+    margin-right: 35%;
+    font-size: 2.5rem;
+}
+
+
+.input_wrapper {
+    text-align: center;
+    color: white;
+    background-color: #994636;
+    margin-left: 35%;
+    margin-right: 35%;
+    padding: 25px;
+    border: solid 5px white;
 }
 
 /* CSS */
 #convert-btn {
-    align-items: center;
+    font-family: "Castoro Titling", system-ui;
+    font-weight: bold;
     appearance: none;
-    background-color: #FCFCFD;
+    background-color: #E9B44C;
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #be9239 0 -3px 0 inset;
     height: 35px;
-    padding-left: 16px;
-    padding-right: 16px;
+    width: 75%;
     transition: box-shadow .15s, transform .15s;
     font-size: 18px;
 }
 
-#convert-btn:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
 #convert-btn:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #be9239 0 -3px 0 inset;
     transform: translateY(-2px);
 }
 
 #convert-btn:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
+    box-shadow: #be9239 0 3px 7px inset;
     transform: translateY(2px);
 }
 
 #number {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    height: 35px;
-    padding-left: 16px;
-    padding-right: 16px;
-    transition: box-shadow .15s, transform .15s;
-    font-size: 18px;
-}
-
-.wrapper {
     text-align: center;
+    font-family: "Rubik Doodle Shadow", system-ui;
+    font-size: 1.5rem;
+    background-color: #28344b;
+    box-shadow: 0 0 10px #1b2435 inset;
+    border: solid 1px white;
+    border-radius: 4px;
+    color: white;
+    height: 60px;
+    width: 75%;
 }
