--- a/RomanNumeralConverter/styles.css
+++ b/RomanNumeralConverter/styles.css
@@ -5,12 +5,15 @@ html {
 }
 
 
+body {
+    margin-left: 35%;
+    margin-right: 35%;
+}
+
 h1 {
     text-align: center;
     color: white;
-    margin-top: 10%;
-    margin-left: 35%;
-    margin-right: 35%;
+    padding-top: 100px;
     font-size: 2.5rem;
 }
 
@@ -19,8 +22,7 @@ h1 {
     text-align: center;
     color: white;
     background-color: #994636;
-    margin-left: 35%;
-    margin-right: 35%;
+    
     padding: 25px;
     border: solid 5px white;
 }
@@ -61,4 +63,14 @@ h1 {
     color: white;
     height: 60px;
     width: 75%;
+}
+
+#output {
+    text-align: center;
+    font-size: 1.5rem;
+    color: white;
+    background-color: #994636;
+    border: solid 5px white;    
+    padding: 30px;
+    display: none;
 }
