--- a/PokemonSearchApp/styles.css
+++ b/PokemonSearchApp/styles.css
@@ -5,6 +5,11 @@ html {
     background-repeat: no-repeat;
 }
 
+
+::-webkit-scrollbar {
+    width: 0;
+}
+
 body {
     font-family: "Orbitron", sans-serif;
     font-optical-sizing: auto;
@@ -16,14 +21,12 @@ body {
 }
 
 #search-wrapper {
-    width: 75%;
-    margin-left: 13%;
+    margin-left: 600px;
     margin-top: 30px;
 }
 
 #searcher {
-    width: 50%;
-    margin-left: 25%;
+    width: 700px;
     background: linear-gradient(109.8deg, rgb(62, 5, 116) -5.2%, rgb(41, 14, 151) -5.2%, rgb(216, 68, 148) 103.3%);
     ;
     border-radius: 20px;
@@ -71,9 +74,8 @@ body {
 
 
 #results {
-    padding-top: 20px;
-    padding-bottom: 50px;
-    display: flex;
+    padding-top: 10px;
+    display: inline-flex;
 }
 
 .small {
@@ -83,27 +85,21 @@ body {
 }
 
 #image-container {
-    width: 35%;
-    margin-left: 10%;
-    border-radius: 20px;
-    margin-right: 20px;
+    width: 680px;
+    height: 630px;
+    border-radius: 25px;
     background-position: center;
-}
-
-#sprite {
-    margin-top: 10px;
 }
 
 #pokemon {
     display: flex;
     justify-content: space-evenly;
-
 }
 
 .pokemon-name>h4,
 .pokemon-id>h4 {
     font-weight: 800;
-    padding-top: 10px;
+    padding-top: 15px;
 }
 
 .pokemon-name>h3,
@@ -120,8 +116,8 @@ body {
 }
 
 #types {
-    padding-left: 20px;
-    padding-top: 20px;
+    padding-left: 40px;
+    padding-top: 40px;
 }
 
 #types>a {
@@ -148,19 +144,18 @@ body {
 }
 
 table {
-    width: 100%;
     font-size: 1.3rem;
 }
 
 td,
 th {
     text-align: center;
-    padding: 8px;
+    padding: 25px;
+    padding-left: 150px;
 }
 
 .column {
     display: flex;
-    width: 100%;
     margin-left: -3%;
 }
 
@@ -181,5 +176,3 @@ th {
     border: none;
     background-color: #30A7D7;
 }
-
-@media only screen and (max-width: 1300px) {}
